# divideAndSlurm

./: README.md  pyproject.toml  setup.py
divideAndSlurm/: __init__.py  monitor.py  task.py  utils.py
